Version ClaSS-0.8.48 release (2008/05/12)
-----------------------------------------

Allowed the number of material entries to mutiply as they get filled on
new_order.php.

In th ecommentwriter the profile statements are now added to the
statementbank instead of straight into the comment.



Version ClaSS-0.8.47 release (2008/05/09)
-----------------------------------------

Implemented sub-budgets as a "New budget" call from the
order_limit.php page, and the costlimits of sub-budgets are tallied by
the get_balance_ functions. NB. This does not allow for
sub-sub-budgets!

Added a specialaction field to the ordersupplier table to distinguish
non-suppliers like petty cash who bypass the delivery and invoice
actions.

The orderinvoice table has ben given currency and debitcost fields,
the latter used for charging against the budget exclusively, the other
cost fields are optionaly and purely for information only.

Bugfix to the new_staff.php page in the EntryBook which was producing
a fatal error in PHP5.

Bugfix to the install process which was failing to create the
categorydef table.

Bugfix to maxlength setting in xmlelement_input() for decimal and
integers.

Added a starter .htaccess file as part the toplevel directory
structure in install. Amended the install README to mention this.


Version ClaSS-0.8.46 release (2008/05/05)
-----------------------------------------

Added a list_formgroups() function for consistency.

Improved the staff_details page to select by username or surname and
to seperate out disabled logins to another list. Allowed get_user() to
take uid or username as key.

The MarkBook column filter now recognises profile assessments distinct
form tracking and reporting.

Tidied up SEN related things. Including, moving the SEN array out of
the main fetchStudent call to its own fetchSEN() function. Same as for
MedicalFlag, the SENFlag is sufficient within Student everywhere
except in the SEN book. Altered the sentype db table; sentype field is